--- a/nextjs-site/package.json
+++ b/nextjs-site/package.json
@@ -33,7 +33,9 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "react-icons": "^5.0.0",
+    "shiki": "^1.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
